Widening case list (on imac got horizontal scroll) always having resource on case indcating entries without resource (number) reseting distance for "re-used" units correct filtering for (re-)connected clients

--- a/Resource-Conductor-Client/public/stylesheets/resources.css
+++ b/Resource-Conductor-Client/public/stylesheets/resources.css
@@ -17,7 +17,7 @@
     list-style-type: none;
     margin:          0;
     padding:         0;
-    width:           365px;
+    width:           375px;
     float:           left;
 }
 
